# umbf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/assets/: asset.hpp  image.hpp  library.hpp  material.hpp  scene.hpp  utils.hpp
include/umbf/: log.hpp  umbf.hpp  utils.hpp
scripts/: atlas_min_size.py  sign_request.py
src/: asset.cpp  image.cpp  library.cpp  material.cpp  scene.cpp  stream.cpp  umbf.cpp  utils.cpp
src/assets/: library.cpp  scene.cpp  utils.cpp
